samples/_failures_safe/1761481739_9dfc44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e665fc7e.c: In function ‘main’:
./samples/SAFE/__tmp_e665fc7e.c:158:5: error: expected declaration or statement at end of input
  158 |     return 0;
      |     ^~~~~~
